--- a/DOM/index.html
+++ b/DOM/index.html
@@ -8,21 +8,23 @@
   </head>
   <body>
 
-<h1>Hello</h1>
+<h1 id="title">Hello</h1>
+
+  <a href="https://www.google.com/">Google (Not targeted)</a>
 
 <input type="checkbox" />
 
-<button style=":active: color: red;">Click Me</button>
+<button class="btn" style=":active: color: red;">Click Me</button>
 
-<ul>
-  <li>
-    <a href="https://www.google.com/">Google</a>
-  </li>
-  <li class"list">Second</li>
-  <li class"list">Third</li>
+<ul id="list">
+  <li class="item"><a href="https://www.google.com/">Google</a></li>
+  <li class="item">Second</li>
+  <li class="item">Third</li>
 </ul>
 
 
-<script src="index.js" charset="utf-8"></script>
-  </body>
+</body>
+<footer>
+  <script src="index.js" charset="utf-8"></script>
+</footer>
 </html>
