--- a/Drum Kit Starting Files/index.html
+++ b/Drum Kit Starting Files/index.html
@@ -26,5 +26,6 @@
     Made with ❤️ in London.
   </footer>
    <script src="index.js" charset="utf-8"></script>
+   <script src="lesson.js" charset="utf-8"></script>
 </body>
 </html>
