--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -7,12 +7,18 @@
   </head>
   <body>
 
-<h1>Hello</h1>
+<h1 class="example1 example2">Hello</h1>
+
+<img src="drum.png" alt=""/> <!-- Example Image -->
+<a href="https://www/google.com">Search</a>
+
 <button>Click me</button>
 <button>Click me</button>
 <button>Click me</button>
 <button>Click me</button>
 <button>Click me</button>
+
+<input type="text" name="" value="">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="index.js" charset="utf-8"></script>
