AP - Added some new artwork

--- a/Rhi Designs- Art Portfolio/rhi.html
+++ b/Rhi Designs- Art Portfolio/rhi.html
@@ -476,6 +476,28 @@
                 </div>
              </div>
 
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="popup" onclick="popup40()"><h1 class="circle i-text grow">i</h1>
+                            <span class="popuptext" id="myPopup40">Custom Capstone Background</span>
+                        </div>
+                        <a href="rhi-images/logo-1.jpg" target="_blank">
+                            <img class="hori-img-3" src="rhi-images/share-bg.jpg">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="popup" onclick="popup41()"><h1 class="circle i-text grow">i</h1>
+                            <span class="popuptext" id="myPopup41">Custom Capstone Background</span>
+                        </div>
+                        <a href="rhi-images/logo-1.jpg" target="_blank">
+                            <img class="hori-img-4" src="rhi-images/share-bg-2.png">
+                        </a>
+                    </div>
+                </div>
+
             </div>
 
 
