AP - Fixed Big Views Styling

--- a/Rhi Designs- Art Portfolio/rhi.html
+++ b/Rhi Designs- Art Portfolio/rhi.html
@@ -735,7 +735,7 @@
             <p class="under-title">If you like what you see or wish to see more of my art,
             please contact me <a class="res-link" href="mailto:rhiannon.nicole.hayes@gmail.com" target="_blank">here</a>.
             If you want to see my live projects, please go to my <a class="res-link" href="https://rhihayes.github.io/" target="_blank">professional website</a>.
-            If you want to know more about my experience and certifications, check out my <a class="res-link" href="https://www.linkedin.com/in/rhiannon-nicole-hayes/" target="_blank">LinkedIn</a>..</p>
+            If you want to know more about my experience and certifications, check out my <a class="res-link" href="https://www.linkedin.com/in/rhiannon-nicole-hayes/" target="_blank">LinkedIn</a>.</p>
         </div>
 
         <div class="col-md-1"></div> <!--EMPTY DIV FOR SPACING-->
