--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Calculator</title>
+    <title>Weather App</title>
   </head>
   <body>
 
-    <h1>Calculator</h1>
+<form action="/" method="post">
 
-<form class="" action="/" method="post">
-  <input type="text" name="num1" placeholder="First Number">
-  <input type="text" name="num2" placeholder="Second Number">
-  <button type="submit">Calculate</button>
+<label for="cityInput">City Name:</label>
+<input id="cityInput" type="text" name="cityName">
+<button type="submit" name="button">Submit</button>
+
 </form>
 
   </body>
